# libgretchen

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  est_rec_device.c  runcmake.sh  runcmake_debug.sh
incoming/: CMak  CMakeLists.txt  allparams.txt  allparams_short.txt  opt5  runcmake.sh
libs/backendaudio/: CMakeLists.txt  playback.c  record.c  testpa.c  testsigaction.c
libs/backendaudio/include/: gretchen.backend.h  grt_backend.h
libs/gretchen/: CMakeLists.txt
libs/gretchen/include/: gretchen.h  gretchen.h.in  gretchen.internal.h
libs/gretchen/include/internal/: grt.h  grt_aux.h  hashmap.h  ringbuffer_u.h
libs/gretchen/src/auxm/src/: grt_aux.c  hashmap.c  ringbuffer_u.c
libs/gretchen/src/auxm/tests/: testrxenv.c  testrxreap.c  testrxtransm.c  testsigaction.c
libs/gretchen/src/helper/src/: hashmap.c  helper.c  ringbuffer_u.c
libs/gretchen/src/helper/tests/: testrxenv.c  testrxreap.c  testrxtransm.c
libs/gretchen/src/modem/src/: grt_modemrx.c  grt_modemtx.c  grt_modulatorrx.c  grt_modulatortx.c  grt_options.c  modemrx.c  modemtx.c  modulatorrx.c  modulatortx.c  options.c  rx.c  tx.c
libs/gretchen/src/modem/tests/: iirdes_example.c  testmodem.c  testoptions.c  testoptionsfile.c  testrx.c  testtx.c
libs/gretchenbackend/: CMakeLists.txt  backend.c  playback.c  record.c  sigcatch.c  testestrecdevice.c  testpa.c  testsigaction.c
libs/gretchenbackend/include/: gretchen.backend.h
sandbash/: noise0  noise1  noise2  noise3  opt0  opt1  opt10  opt3  opt4  opt5  opt6  opt7  opt8  opt9  plot_waves.py  selftest_gapped.sh  selftest_gapped2.sh  selftest_pipe.sh  selftest_pipe_noise.sh
sandbox/: dec.c  enc.c  gret.c  noise.c  play.c  play2.c  rec.c  rec2.c
scripts/: opt0  opt10  opt2  opt4  opt7  opt8  opt9  selftest_pipe.sh
shell/: dec.c  enc.c  gret.c  play.c  rec.c
